[package]
name = "co-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive"] }
env_logger = "0.10.0"
rand = "0.8.5"
regex = "1.9.1"
threadpool = "1.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
 lto = true
 debug = true
